[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Carson Chapman <carsonchapman1123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.5.7"

[tool.ruff.lint]
ignore = ["E741"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
